--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./server.ts",
-    "start": "node server.ts"
+    "start": "node build/server.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
